# letterboxd-for-literature

./: .claudeignore  .gitignore  CLAUDE.md  CLAUDE_CONTEXT.md  PageTurner_SRS_v1.0.docx  docker-compose.yaml  gr_page.html  happy-kindling-hinton.md  project_walkthrough.md
backend/: .dockerignore  Dockerfile  celerybeat-schedule  pyproject.toml
backend/books/: admin.py  google_books.py  groq_utils.py  models.py  scraper.py  serializers.py  tasks.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_book_google_books_id.py  0003_bookshelftag_communitymodel.py  0004_book_goodreads_id_book_goodreads_url_book_scraped_and_more.py  0005_communitysong_delete_communitymodel.py
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
backend/logs/: models.py  serializers.py  urls.py  views.py
backend/logs/migrations/: 0001_initial.py  0002_readinglog_completed_at.py
backend/notifications/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_alter_notification_review_alter_notification_sender.py
backend/playlists/: groq.py  models.py  serializers.py  urls.py  views.py
backend/recommendations/: groq.py  models.py  prompt.txt  serializers.py  tasks.py  urls.py  views.py
backend/reviews/: apps.py  idk.py  models.py  reviews-test.txt  sentiment.py  sentiment_groq.py  sentiment_old.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/stats/: urls.py  views.py
backend/users/: models.py  serializers.py  urls.py  views.py
(+55 files in other folders)
